# claude-post

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  accounts.toml.example  pyproject.toml  run_integration_tests.py  run_pagination_tests.py  test_data_processing.py
.github/workflows/: ci.yml
src/email_client/: __init__.py  __main__.py  annotated_server.py  config.py  email_client.py  server.py
src/email_client/data_processing/: __init__.py  datastore.py
src/mcp_framework/: README.md  __init__.py  base.py  decorators.py  schema_generator.py
src/mcp_framework/examples/: calculator_server.py  run_calculator.py
tests/: __init__.py  conftest.py  test_accounts_config.py  test_aggregate.py  test_calculator_server.py  test_config.py  test_datastore_security.py  test_date_ordered_pagination.py  test_email_backlinks.py  test_email_integration.py  test_email_transport_security.py  test_fetch_cap.py  test_folder_parsing.py  test_mcp_data_processing.py  test_mcp_email_endpoints.py  test_multi_account_server.py  test_pagination.py  test_search_past_end.py  test_server_pagination.py  test_stable_ids.py
