[project]
name = "email_client"
version = "0.3.0"
description = "Email search and management tool using MCP protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4,<2",
    "python-dotenv>=1.1.0",
    "pandas>=2.0.0,<4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "black>=25.1.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_client", "src/mcp_framework"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/assets",
]

[project.scripts]
email-client = "email_client:main"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration: requires configured email credentials and network access",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "A002",   # public protocol parameters may intentionally use names such as format
    "PTH",    # pathlib migration is not required for correctness
    "PLR0911", # branching limits are unsuitable for schema/dispatcher functions
    "PLR0912",
    "PLR0915",
    "PLR2004", # constants in validation and tests remain readable inline
    "TRY300",
    "TRY301",
    "TRY003", # avoid specifying long messages outside exception class
    # Tracebacks can expose email content and tool arguments; handlers log only
    # the exception type deliberately.
    "TRY400",
    "PLR0913", # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"src/mcp_framework/base.py" = ["T201"]  # describe command prints to stdout intentionally
"src/mcp_framework/examples/*.py" = ["T201"]
"tests/test_email_integration.py" = ["T201"]
"run_integration_tests.py" = ["T201"]
"test_data_processing.py" = ["T201"]
